syntax = "proto3";

package api;

option go_package = "./api";

service MessagesService {
    rpc SendMessage(Message) returns(MessagesStatusResponse) {}
    rpc AllMessages(MessagesZeroRequest) returns(Messages) {}
}

message MessagesZeroRequest {}

message Message {
  bytes id = 1;
  string text = 2;
}

message Messages {
  string text = 1;
}

message MessagesStatusResponse {
  bool success = 1;
  string error_message = 2;
}
